--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculadora de Freela - He4rtDevs</title>
-    <link rel="stylesheet" href="./main.css" />
-  </head>
-  <body>
-    <div>
-      <h1>Olá mundo.</h1>
-    </div>
-    <script src="./main.js"></script>
-  </body>
+<html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Calculadora de Freela - He4rtDevs</title>
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./main.css" />
+</head>
+
+<body>
+
+  <div class="container">
+
+    <header class="header">
+      <a href="http://heartdevs.com/" class="logo"><img src="logo-he4rt2.png" alt="logo"></a>
+      <h1>Calculadora de Freelas</h1>
+    </header>
+
+    <main class="content">
+      <div class="description">
+        <img src="3281755.jpg" alt="trabalhando">
+        <p>O projeto tem a finalidade de descrever alguns fatores determinantes para você saber o seu valor da sua hora
+          em um freelance.
+        </p>
+      </div>
+
+      <div class="form">
+        <form class="form">
+          <label for="hrD">Horas Diárias</label>
+          <input type="number" name="" id="hrD">
+          <label for="dia">Dias da Semana</label>
+          <input type="number" name="" id="dia">
+          <label for="ferias">Dias de Féris</label>
+          <input type="number" name="" id="ferias">
+          <label for="vProjeto">Valor Total do seu Projeto</label>
+          <input type="number" name="" id="vProjeto">
+          <span class="resultado">R$</span>
+          
+        </form>
+        <button class="btn">Calcular</button>
+      </div>
+    </main>
+
+    <section class="cards">
+      <div class="card">
+        <h2>Tempo diário investido no projeto</h2>
+        <p>Agora vamos entender um pouco mais sobre esses fatores começando pelo fator tempo diário investido. Quando tratamos de freelances, há uma certa demanda do seu tempo em off. Ou seja: depois do trabalho, escola ou aquele tempinho vago no final do dia que você usa pra relaxar e descontrair. Esse tempo é algo muito valioso para qualquer pessoa, certo? Então claramente temos que levar esse fator em consideração.
+        </p>
+      </div>
+      <div class="card">
+        <h2>Dias efetivos trabalhando</h2>
+        <p>Outro fator é a quantidade de dias efetivos que você irá disponibilizar para trabalhar no projeto. Não há nenhuma garantia que você poderá trabalhar todos os dias e de fato lidar com o processo de confirmar tudo com o cliente. Logo, você terá que cotar uma quantidade de dias específicos para lidar com todo o processo, sendo ele a parte comercial e desenvolvimento.</p>
+      </div>
+      <div class="card">
+        <h2>Dias de Férias por projeto</h2>
+        <p>Qualquer modalidade de trabalho, seja CLT ou PJ, há seus encargos referentes à verba de férias e não seria diferente para lidar com um freela. Uma parte do valor da sua hora reflete diretamente na quantidade de dias que você deseja tirar "férias" com o valor total projeto.</p>
+      </div>
+      <div class="card">
+        <h2>Valor total do Projeto</h2>
+        <p>Não podemos esquecer do principal fator que é o total a ser recebido pelo freela. A partir desse valor, do quanto você desejaria ganhar em cima do trabalho, é feito o cálculo maior.</p>
+      </div>
+    </section>
+
+    <footer class="footer">
+      &copy; Desenvolvido por <a href="https://github.com/brunosann">Bruno Teixeira</a>
+    </footer>
+
+  </div>
+
+  <script src="./main.js"></script>
+</body>
+
 </html>
